--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,8 +1,12 @@
 {
     "compilerOptions": {
+        "target": "es6",
+        "module": "commonjs",
+
         "baseUrl": ".",
         "paths": {
             "~/*": ["src/*"]
         }
-    }
+    },
+    "exclude": ["node_modules", "dist"]
 }
