--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
+    "@mui/icons-material": "^6.1.1",
     "@mui/material": "^6.1.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -19,6 +20,7 @@
     "react-scripts": "5.0.1",
     "sass": "^1.79.1",
     "scss": "^0.2.4",
+    "styled-components": "^6.1.13",
     "web-vitals": "^2.1.4"
   },
   "devDependencies": {
