--- a/.prettierrc
+++ b/.prettierrc
@@ -15,5 +15,14 @@
     "tabWidth": 4,
     "trailingComma": "all",
     "useTabs": false,
-    "vueIndentScriptAndStyle": false
+    "vueIndentScriptAndStyle": false,
+    "overrides": [
+        {
+            "files": ["*.style.js"],
+            "options": {
+                "printWidth": 120,
+                "singleQuote": true
+            }
+        }
+    ]
 }
